--- a/index.html
+++ b/index.html
@@ -1,16 +1,14 @@
-<!doctype html>
+<!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>georgelowe.io</title>
-  <link rel="stylesheet" href="#">
-</head>
-<body>
-  <h1>George Lowe</h1>
+  <head>
+    <meta charset="utf-8" />
+    <title>georgelowe.io</title>
+    <link rel="stylesheet" href="#" />
+  </head>
+  <body>
+    <h1>WIP</h1>
 
-
-
-  <script src="#"></script>
-</body>
+    <script src="#"></script>
+  </body>
 </html>
