--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
     <link rel="stylesheet" href="#" />
   </head>
   <body>
-    <h1>WIP</h1>
+    <h1>Sophie Riches</h1>
+    Hello Sophie
 
     <script src="#"></script>
   </body>
