--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <link rel="stylesheet" href="#" />
   </head>
   <body>
-    <h1>Sophie Riches</h1>
-    Hello Sophie
+    <h1>WIP</h1>
 
     <script src="#"></script>
   </body>
