--- a/index.html
+++ b/index.html
@@ -4,11 +4,32 @@
   <head>
     <meta charset="utf-8" />
     <title>georgelowe.io</title>
-    <link rel="stylesheet" href="#" />
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <h1>WIP</h1>
+    <nav>
+      <ul class="navigation">
+        <li class="nav-item">
+          <a href="#"> About</a>
+        </li>
+        <li class="nav-item">
+          <a href="#">Projects</a>
+        </li>
+        <li class="nav-item">
+          <a href="https://github.com/georgelowe"> Github</a>
+        </li>
+        <li class="nav-item">
+          <a href="#"> Contact</a>
+        </li>
+      </ul>
+    </nav>
+    <div class="banner">
+      <h1 class="banner-title">George Lowe</h1>
+      <p class="banner-tagline">
+        BSc Computer Science Graduate with Study Abroad Experience
+      </p>
+    </div>
 
-    <script src="#"></script>
+    <script src="script.js"></script>
   </body>
 </html>
