--- a/index.html
+++ b/index.html
@@ -7,27 +7,29 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <ul class="navigation">
-        <li class="nav-item">
-          <a href="#"> About</a>
-        </li>
-        <li class="nav-item">
-          <a href="#">Projects</a>
-        </li>
-        <li class="nav-item">
-          <a href="https://github.com/georgelowe"> Github</a>
-        </li>
-        <li class="nav-item">
-          <a href="#"> Contact</a>
-        </li>
-      </ul>
-    </nav>
-    <div class="banner">
-      <h1 class="banner-title">George Lowe</h1>
-      <p class="banner-tagline">
-        BSc Computer Science Graduate with Study Abroad Experience
-      </p>
+    <div class="page-container">
+      <nav>
+        <ul class="navigation">
+          <li class="nav-item">
+            <a href="#"> About</a>
+          </li>
+          <li class="nav-item">
+            <a href="#">Projects</a>
+          </li>
+          <li class="nav-item">
+            <a href="https://github.com/georgelowe"> Github</a>
+          </li>
+          <li class="nav-item contact-btn">
+            <a href="#"> Contact</a>
+          </li>
+        </ul>
+      </nav>
+      <div class="banner">
+        <h1 class="banner-title">George Lowe</h1>
+        <p class="banner-tagline">
+          BSc Computer Science Graduate with Study Abroad Experience
+        </p>
+      </div>
     </div>
 
     <script src="script.js"></script>
