--- a/index.html
+++ b/index.html
@@ -14,13 +14,16 @@
       <nav>
         <ul class="navigation">
           <li class="nav-item">
-            <a class="nav-link" href="#">Projects</a>
+            <a class="nav-link" href="#projects">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://github.com/georgelowe"> Github</a>
           </li>
-          <li class="nav-item contact-btn">
-            <a class="contact-link" href="#"> Contact</a>
+          <li class="nav-item">
+            <a class="nav-link" href="#contact"> Contact</a>
+          </li>
+          <li class="nav-item cta-btn">
+            <a class="cta-link" href="#"> Download CV</a>
           </li>
         </ul>
       </nav>
@@ -60,7 +63,7 @@
         </p>
       </div>
 
-      <div class="cards">
+      <div id="projects" class="cards">
         <h2 class="section-title">Projects</h2>
         <div class="card">
           <div class="project-title">Project1</div>
@@ -74,10 +77,12 @@
         <div class="card"><div class="project-title">Project4</div></div>
       </div>
 
-      <div class="get-in-touch">
+      <div id="contact" class="get-in-touch">
         <h2 class="section-title">Get in touch</h2>
-        <li class="nav-item contact-btn">
-          <a class="contact-link" href="#"> Contact Me</a>
+        <li class="nav-item cta-btn">
+          <a class="cta-link" href="mailto:georgeloweone@gmail.com">
+            Send me an email</a
+          >
         </li>
       </div>
       <div class="footer">
