--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800,900"
       rel="stylesheet"
     />
+    <script
+      src="https://kit.fontawesome.com/2b4bfd313b.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <div class="page-container">
@@ -35,8 +39,7 @@
         <p class="banner-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor non
           pariatur fugit nemo quam.
-          <a class="paragraph-link" href="#"
-            >This text is highlighted in yellow </a
+          <a class="paragraph-link" href="#">This text is highlighted </a
           >delectus laudantium expedita, debitis voluptatum rem rerum maiores.
           Dolore eius in sed quo libero est,
           <a class="paragraph-link" href="#">consequatur</a> impedit. Adipisci
@@ -51,6 +54,8 @@
           <code class="code">Welcome to the terminal</code>
         </pre>
       </div>
+
+      <h2 class="section-title">Notable Projects</h2>
       <div class="information">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
@@ -64,31 +69,102 @@
       </div>
 
       <div id="projects" class="cards">
-        <h2 class="section-title">Projects</h2>
-        <div class="card">
-          <div class="project-title">Project1</div>
-        </div>
-        <div class="card">
-          <div class="project-title">Project2</div>
-        </div>
-        <div class="card">
-          <div class="project-title">Project3</div>
-        </div>
-        <div class="card"><div class="project-title">Project4</div></div>
+        <button class="card">
+          <div class="project-title">
+            Camera-based object tracking for VR experiences 📸
+          </div>
+          <div class="project-description">
+            This project introduces a complete system, such that a physical
+            object is tracked using a webcam and reproduced in the same precise
+            location within a virtual environment, allowing users to manipulate
+            the object whilst in virtual reality.
+          </div>
+
+          <a href="https://github.com/georgelowe/VR-Object-Tracking"
+            ><div class="view-source-btn">
+              <p class="demo-code-title">View Code</p>
+              <i
+                class="fab fa-github demo-code"
+                style="font-size: 1.5rem; color: #ccd6f6"
+              ></i></div
+          ></a>
+        </button>
+
+        <button class="card">
+          <div class="project-title">Instagram Automation Bot 💬</div>
+          <div class="project-description">
+            I designed and implemented this bot out of the desire to automate
+            tasks I faced when growing a brand Instagram. Features include,
+            calculating users that do not follow an account back and unfollowing
+            them, liking and commenting on posts by a set of specific users or
+            hashtags and analysing growth data over time.
+          </div>
+
+          <a href="https://github.com/georgelowe/Instagram-Automation"
+            ><div class="view-source-btn">
+              <p class="demo-code-title">View Code</p>
+              <i
+                class="fab fa-github demo-code"
+                style="font-size: 1.5rem; color: #ccd6f6"
+              ></i></div
+          ></a>
+        </button>
+
+        <button class="card">
+          <div class="project-title">Responsive Portfolio Website 🏠</div>
+          <div class="project-description">
+            This website that you are currently visiting was designed and
+            produced by me to showcase my work, provide links to my code and to
+            allow potential employers to reach out and contact me.
+          </div>
+
+          <a href="https://github.com/georgelowe/georgelowe.github.io"
+            ><div class="view-source-btn">
+              <p class="demo-code-title">View Code</p>
+              <i
+                class="fab fa-github demo-code"
+                style="font-size: 1.5rem; color: #ccd6f6"
+              ></i></div
+          ></a>
+        </button>
       </div>
 
       <div id="contact" class="get-in-touch">
-        <h2 class="section-title">Get in touch</h2>
-        <li class="nav-item cta-btn">
-          <a class="cta-link" href="mailto:georgeloweone@gmail.com">
-            Send me an email</a
-          >
-        </li>
+        <h2 class="section-title">Get In Touch</h2>
+        <div class="information">
+          <p>
+            If you have any questions or would like to reach out then feel free
+            to<a class="paragraph-link" href="mailto:georgeloweone@gmail.com">
+              email me
+            </a>
+            or find me in any of these places:
+          </p>
+        </div>
+
+        <div class="icons">
+          <a href="https://github.com/georgelowe"
+            ><i
+              class="icon fab fa-github"
+              style="font-size: 2rem; color: #ccd6f6"
+            ></i
+          ></a>
+          <a href="https://twitter.com/gloweio"
+            ><i
+              class="icon fab fa-twitter"
+              style="font-size: 2rem; color: #ccd6f6"
+            ></i
+          ></a>
+
+          <a href="https://www.linkedin.com/in/george-lowe/"
+            ><i
+              class="icon fab fa-linkedin"
+              style="font-size: 2rem; color: #ccd6f6"
+            ></i
+          ></a>
+        </div>
       </div>
       <div class="footer">
-        <div class="footer-text">
-          Website designed and created by George Lowe
-        </div>
+        <div class="footer-text">Designed & Built by George Lowe</div>
       </div>
     </div>
 
