--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
           <li class="nav-item">
             <a class="nav-link" href="#contact"> Contact</a>
           </li>
-          <li class="nav-item cta-btn">
-            <a class="cta-link" href="#"> Download CV</a>
+          <li class="nav-item">
+            <form method="get" action="George Lowe CV.pdf">
+              <button class="cta-btn">Download CV</button>
+            </form>
           </li>
         </ul>
       </nav>
@@ -50,8 +52,17 @@
       </div>
 
       <div class="terminal">
+        <div class="terminal-menu-bar"></div>
         <pre>
-          <code class="code">Welcome to the terminal</code>
+          <code class="code">~ $ george.education()
+           <span class="code-response">BSc Computer Science, University of Nottingham</span>
+           ~ $ george.location()
+           <span class="code-response">U.K.</span>
+           ~ $ george.email()
+           <span class="code-response">georgeloweone@gmail.com</span>
+           ~ $ george.languages()
+           <span class="code-response">[python, javascript, c#, html, css]</span>
+          </code>
         </pre>
       </div>
 
