Adjusted terminal style

--- a/index.html
+++ b/index.html
@@ -62,8 +62,17 @@
            <span class="code-response">georgeloweone@gmail.com</span>
            ~ $ george.languages()
            <span class="code-response">[python, javascript, c#, html, css]</span>
+
           </code>
         </pre>
+
+        <a href="#"
+          ><div>
+            <i
+              class="fas fa-redo restart-terminal"
+              style="font-size: 1.2rem; color: #ccd6f6"
+            ></i></div
+        ></a>
       </div>
 
       <h2 class="section-title">Notable Projects</h2>
