Tidied CSS into sections

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
   </head>
   <body>
     <div class="page-container">
+      <!-- Navigation Bar -->
       <nav>
         <ul class="navigation">
           <li class="nav-item">
@@ -33,6 +34,8 @@
           </li>
         </ul>
       </nav>
+
+      <!-- Introductory Banner -->
       <div class="banner">
         <h1 class="banner-title">George Lowe</h1>
         <h2 class="banner-tagline">
@@ -41,16 +44,17 @@
         <p class="banner-description">
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor non
           pariatur fugit nemo quam.
-          <a class="paragraph-link" href="#">This text is highlighted </a
-          >delectus laudantium expedita, debitis voluptatum rem rerum maiores.
-          Dolore eius in sed quo libero est,
-          <a class="paragraph-link" href="#">consequatur</a> impedit. Adipisci
+          <a class="in-text-link" href="#">This text is highlighted </a>delectus
+          laudantium expedita, debitis voluptatum rem rerum maiores. Dolore eius
+          in sed quo libero est,
+          <a class="in-text-link" href="#">consequatur</a> impedit. Adipisci
           nobis temporibus sequi, blanditiis amet consequatur necessitatibus ut
           cupiditate. Reiciendis commodi consequatur impedit. Adipisci nobis
           mollitia quas dolorem dignissimos.
         </p>
       </div>
 
+      <!-- Animated Terminal Window -->
       <div class="terminal">
         <div class="terminal-menu-bar"></div>
         <pre>
@@ -62,11 +66,9 @@
            <span class="code-response">georgeloweone@gmail.com</span>
            ~ $ george.languages()
            <span class="code-response">[python, javascript, c#, html, css]</span>
-
           </code>
         </pre>
-
-        <a href="#"
+        <a
           ><div>
             <i
               class="fas fa-redo restart-terminal"
@@ -75,8 +77,9 @@
         ></a>
       </div>
 
+      <!-- Projects Cards -->
       <h2 class="section-title">Notable Projects</h2>
-      <div class="information">
+      <div class="text-chunk">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
           cumque et iste dolorem officia adipisci ipsum, cum hic consequatur
@@ -99,12 +102,13 @@
             location within a virtual environment, allowing users to manipulate
             the object whilst in virtual reality.
           </div>
+          <div class="project-tech-stack"></div>
 
           <a href="https://github.com/georgelowe/VR-Object-Tracking"
             ><div class="view-source-btn">
-              <p class="demo-code-title">View Code</p>
+              <p class="card-git-link">View Code</p>
               <i
-                class="fab fa-github demo-code"
+                class="fab fa-github card-git-icon"
                 style="font-size: 1.5rem; color: #ccd6f6"
               ></i></div
           ></a>
@@ -122,9 +126,9 @@
 
           <a href="https://github.com/georgelowe/Instagram-Automation"
             ><div class="view-source-btn">
-              <p class="demo-code-title">View Code</p>
+              <p class="card-git-link">View Code</p>
               <i
-                class="fab fa-github demo-code"
+                class="fab fa-github card-git-icon"
                 style="font-size: 1.5rem; color: #ccd6f6"
               ></i></div
           ></a>
@@ -140,28 +144,29 @@
 
           <a href="https://github.com/georgelowe/georgelowe.github.io"
             ><div class="view-source-btn">
-              <p class="demo-code-title">View Code</p>
+              <p class="card-git-link">View Code</p>
               <i
-                class="fab fa-github demo-code"
+                class="fab fa-github card-git-icon"
                 style="font-size: 1.5rem; color: #ccd6f6"
               ></i></div
           ></a>
         </button>
       </div>
 
-      <div id="contact" class="get-in-touch">
+      <!-- Contact Me -->
+      <div class="contact">
         <h2 class="section-title">Get In Touch</h2>
-        <div class="information">
+        <div class="text-chunk">
           <p>
             If you have any questions or would like to reach out then feel free
-            to<a class="paragraph-link" href="mailto:georgeloweone@gmail.com">
+            to<a class="in-text-link" href="mailto:georgeloweone@gmail.com">
               email me
             </a>
             or find me in any of these places:
           </p>
         </div>
 
-        <div class="icons">
+        <div class="contact-icons">
           <a href="https://github.com/georgelowe"
             ><i
               class="icon fab fa-github"
@@ -183,11 +188,12 @@
           ></a>
         </div>
       </div>
+
+      <!-- Footer -->
       <div class="footer">
         <div class="footer-text">Designed & Built by George Lowe</div>
       </div>
     </div>
-
     <script src="script.js"></script>
   </body>
 </html>
