--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
            ~ $ george.location()
            <span class="code-response">U.K.</span>
            ~ $ george.email()
-           <span class="code-response">georgeloweone@gmail.com</span>
+           <span class="code-response"><a class="code-response-link" href="mailto:georgeloweone@gmail.com">georgeloweone@gmail.com</a></span>
            ~ $ george.languages()
            <span class="code-response">[python, javascript, c#, html, css]</span>
           </code>
@@ -87,7 +87,7 @@
           ullam consectetur! Dignissimos tempora quo quia dolores rerum placeat
           iure, deleniti quis, pariatur dolor qui molestias consequatur eum
           veritatis deserunt. Voluptatum autem et ad, illo illum sit excepturi
-          deleniti corporis ipsum.
+          deleniti corporis ipsum
         </p>
       </div>
 
@@ -103,7 +103,6 @@
             the object whilst in virtual reality.
           </div>
           <div class="project-tech-stack"></div>
-
           <a href="https://github.com/georgelowe/VR-Object-Tracking"
             ><div class="view-source-btn">
               <p class="card-git-link">View Code</p>
@@ -123,7 +122,7 @@
             them, liking and commenting on posts by a set of specific users or
             hashtags and analysing growth data over time.
           </div>
-
+          <div class="project-tech-stack"></div>
           <a href="https://github.com/georgelowe/Instagram-Automation"
             ><div class="view-source-btn">
               <p class="card-git-link">View Code</p>
@@ -141,7 +140,7 @@
             produced by me to showcase my work, provide links to my code and to
             allow potential employers to reach out and contact me.
           </div>
-
+          <div class="project-tech-stack"></div>
           <a href="https://github.com/georgelowe/georgelowe.github.io"
             ><div class="view-source-btn">
               <p class="card-git-link">View Code</p>
@@ -154,7 +153,7 @@
       </div>
 
       <!-- Contact Me -->
-      <div class="contact">
+      <div id="contact" class="contact">
         <h2 class="section-title">Get In Touch</h2>
         <div class="text-chunk">
           <p>
