--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
       </div>
 
       <div id="projects" class="cards">
-        <button class="card">
+        <button id="project1-button" class="card">
           <div class="project-title">
             Camera-based object tracking for VR experiences 📸
           </div>
@@ -113,7 +113,7 @@
           ></a>
         </button>
 
-        <button class="card">
+        <button id="project2-button" class="card">
           <div class="project-title">Instagram Automation Bot 💬</div>
           <div class="project-description">
             I designed and implemented this bot out of the desire to automate
@@ -133,7 +133,7 @@
           ></a>
         </button>
 
-        <button class="card">
+        <button id="project3-button" class="card">
           <div class="project-title">Responsive Portfolio Website 🏠</div>
           <div class="project-description">
             This website that you are currently visiting was designed and
@@ -150,6 +150,16 @@
               ></i></div
           ></a>
         </button>
+      </div>
+
+      <!-- Project Modal -->
+      <div id="project-modal" class="modal">
+        <div class="modal-content">
+          <i
+            class="far fa-times-circle close-modal-icon"
+            style="font-size: 1.5rem; color: #ccd6f6"
+          ></i>
+        </div>
       </div>
 
       <!-- Contact Me -->
