--- a/index.html
+++ b/index.html
@@ -155,6 +155,21 @@
       <!-- Project Modal -->
       <div id="project-modal" class="modal">
         <div class="modal-content">
+          <h2 id="project-title" class="section-title">Project</h2>
+          <div id="project-text" class="text-chunk">
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatem cumque et iste dolorem officia adipisci ipsum, cum hic
+              consequatur velit. optio quod repellat nostrum. Alias quo
+              veritatis in, quas quae ullam consectetur! Dignissimos tempora quo
+              quia dolores rerum placeat iure, deleniti quis, pariatur dolor qui
+              molestias consequatur eum veritatis deserunt
+            </p>
+
+            <button id="project-source-code" class="cta-btn">
+              Source Code
+            </button>
+          </div>
           <i
             class="far fa-times-circle close-modal-icon"
             style="font-size: 1.5rem; color: #ccd6f6"
