Projects are added dynamically instead of hard-coded

--- a/index.html
+++ b/index.html
@@ -101,68 +101,7 @@
         </p>
       </div>
 
-      <div id="projects" class="cards">
-        <button id="project1-button" class="card">
-          <div class="project-title">
-            Camera-based object tracking for VR experiences 📸
-          </div>
-
-          <div class="project-description">
-            This project introduces a complete system, such that a physical
-            object is tracked using a webcam and reproduced in the same precise
-            location within a virtual environment, allowing users to manipulate
-            the object whilst in virtual reality.
-          </div>
-
-          <div class="project-tech-stack"></div>
-          <a href="https://github.com/georgelowe/VR-Object-Tracking"
-            ><div class="view-source-btn">
-              <p class="card-git-link">View Code</p>
-              <i
-                class="fab fa-github card-git-icon"
-                style="font-size: 1.5rem; color: #ccd6f6"
-              ></i></div
-          ></a>
-        </button>
-
-        <button id="project2-button" class="card">
-          <div class="project-title">Instagram Automation Bot 💬</div>
-          <div class="project-description">
-            I designed and implemented this bot out of the desire to automate
-            tasks I faced when growing a brand Instagram. Features include,
-            calculating users that do not follow an account back and unfollowing
-            them, liking and commenting on posts by a set of specific users or
-            hashtags and analysing growth data over time.
-          </div>
-          <div class="project-tech-stack"></div>
-          <a href="https://github.com/georgelowe/Instagram-Automation"
-            ><div class="view-source-btn">
-              <p class="card-git-link">View Code</p>
-              <i
-                class="fab fa-github card-git-icon"
-                style="font-size: 1.5rem; color: #ccd6f6"
-              ></i></div
-          ></a>
-        </button>
-
-        <button id="project3-button" class="card">
-          <div class="project-title">Responsive Portfolio Website 🏠</div>
-          <div class="project-description">
-            This website that you are currently visiting was designed and
-            produced by me to showcase my work, provide links to my code and to
-            allow potential employers to reach out and contact me.
-          </div>
-          <div class="project-tech-stack"></div>
-          <a href="https://github.com/georgelowe/georgelowe.github.io"
-            ><div class="view-source-btn">
-              <p class="card-git-link">View Code</p>
-              <i
-                class="fab fa-github card-git-icon"
-                style="font-size: 1.5rem; color: #ccd6f6"
-              ></i></div
-          ></a>
-        </button>
-      </div>
+      <div id="projects-container" class="cards"></div>
 
       <!-- Project Modal -->
       <div id="project-modal" class="modal">
@@ -183,7 +122,6 @@
                 <source id="media-src" src="Media/Ball.mp4" type="video/mp4" />
               </video>
             </div>
-
             <button src="github.com " id="code-src" class="cta-btn">
               Source Code
             </button>
