Only show modal video if src is not empty

--- a/index.html
+++ b/index.html
@@ -100,24 +100,15 @@
           Click on a project to see more information
         </p>
       </div>
-
       <div id="projects-container" class="cards"></div>
 
       <!-- Project Modal -->
       <div id="project-modal" class="modal">
         <div class="modal-content">
           <h2 id="project-title" class="section-title">Project</h2>
-
           <div class="text-chunk">
-            <p id="project-text">
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem cumque et iste dolorem officia adipisci ipsum, cum hic
-              consequatur velit. optio quod repellat nostrum. Alias quo
-              veritatis in, quas quae ullam consectetur! Dignissimos tempora quo
-              quia dolores rerum placeat iure, deleniti quis, pariatur dolor qui
-              molestias consequatur eum veritatis deserunt
-            </p>
-            <div>
+            <p id="project-text"></p>
+            <div id="video-container">
               <video controls class="vid" width="100%" height="100%" muted>
                 <source id="media-src" src="Media/Ball.mp4" type="video/mp4" />
               </video>
