--- a/index.html
+++ b/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>georgelowe.io</title>
+    <title>George Lowe - Software Developer</title>
+    <link rel="shortcut icon" href="Media/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <link
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800,900"
