Added full description functionality

--- a/index.html
+++ b/index.html
@@ -77,12 +77,12 @@
            <span class="code-response">[python, javascript, c#, html, css]</span>
           </code>
         </pre>
-        <a>
+        <div id="refresh-terminal">
           <i
             class="fas fa-redo restart-terminal"
             style="font-size: 1.2rem; color: #ccd6f6"
-          ></i
-        ></a>
+          ></i>
+        </div>
       </div>
 
       <!-- Projects Cards -->
@@ -108,7 +108,8 @@
         <div class="modal-content">
           <h2 id="project-title" class="section-title">Project</h2>
           <div class="text-chunk">
-            <p id="project-text"></p>
+            <p id="project-summary"></p>
+            <p id="project-main-text"></p>
             <div id="video-container">
               <video controls class="vid" width="100%" height="100%" muted>
                 <source id="media-src" src="Media/Ball.mp4" type="video/mp4" />
