Added basic hamburger menu

--- a/index.html
+++ b/index.html
@@ -18,7 +18,10 @@
     <div class="page-container">
       <!-- Navigation Bar -->
       <nav>
-        <ul class="navigation">
+        <button id="hamburger" class="hamburger">
+          <i class="fas fa-bars"></i>
+        </button>
+        <ul id="nav-ul" class="navigation">
           <li class="nav-item">
             <a class="nav-link" href="#projects">Projects</a>
           </li>
@@ -86,7 +89,7 @@
       </div>
 
       <!-- Projects Cards -->
-      <h2 class="section-title">Notable Projects</h2>
+      <h2 class="section-title">Projects</h2>
       <div class="text-chunk">
         <p>
           Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
