--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
       href="https://fonts.googleapis.com/css?family=Nunito+Sans:300,400,600,700,800,900"
       rel="stylesheet"
     />
+    <meta name="viewport" content="width=device-width,initial-scale=1.0" />
     <script
       src="https://kit.fontawesome.com/2b4bfd313b.js"
       crossorigin="anonymous"
