Tweak to mobile design

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </button>
         <ul id="nav-ul" class="navigation">
           <li class="nav-item">
-            <a class="nav-link" href="#projects">Projects</a>
+            <a class="nav-link" href="#projects-container">Projects</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="https://github.com/georgelowe"> Github</a>
@@ -42,7 +42,7 @@
 
       <!-- Introductory Banner -->
       <div class="banner">
-        <h1 class="banner-title">George Lowe</h1>
+        <h1 class="banner-title">George <span>Lowe</span></h1>
         <h2 class="banner-tagline">
           BSc Computer Science Graduate with Study Abroad Experience
         </h2>
