--- a/index.html
+++ b/index.html
@@ -2,7 +2,12 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>George Lowe - Software Developer</title>
+    <title>George Lowe</title>
+    <meta name="description" content="Software Developer Portfolio" />
+    <meta property="og:url" content="https://www.georgelowe.io" />
+    <meta property="og:description" content="Software Developer Portfolio" />
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="en_GB" />
     <link rel="shortcut icon" href="Media/favicon.ico" />
     <link rel="stylesheet" href="style.css" />
     <link
