Terminal animation implemented fully

--- a/index.html
+++ b/index.html
@@ -68,23 +68,7 @@
       <div class="terminal">
         <div class="terminal-menu-bar"></div>
         <pre>
-          <code class="code">~ $ george.education()
-           <span class="code-response">BSc Computer Science, University of Nottingham</span>
-           ~ $ george.location()
-           <span class="code-response">U.K.</span>
-           ~ $ george.email()
-           <span class="code-response"><a class="code-response-link" href="mailto:georgeloweone@gmail.com">georgeloweone@gmail.com</a></span>
-           ~ $ george.languages()
-           <span class="code-response">[python, javascript, c#, html, css]</span>
-           ~ $ george.languages()
-           <span class="code-response">[python, javascript, c#, html, css]</span>
-           ~ $ george.languages()
-           <span class="code-response">[python, javascript, c#, html, css]</span>
-           ~ $ george.languages()
-           <span class="code-response">[python, javascript, c#, html, css]</span>
-           ~ $ george.languages()
-           <span class="code-response">[python, javascript, c#, html, css]</span>
-          </code>
+          <code class="code"></code>
         </pre>
         <div id="refresh-terminal">
           <i
