Updated Information about me

--- a/index.html
+++ b/index.html
@@ -52,15 +52,21 @@
           BSc Computer Science Graduate with Study Abroad Experience
         </h2>
         <p class="banner-description">
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolor non
-          pariatur fugit nemo quam.
-          <a class="in-text-link" href="#">This text is highlighted </a>delectus
-          laudantium expedita, debitis voluptatum rem rerum maiores. Dolore eius
-          in sed quo libero est,
-          <a class="in-text-link" href="#">consequatur</a> impedit. Adipisci
-          nobis temporibus sequi, blanditiis amet consequatur necessitatibus ut
-          cupiditate. Reiciendis commodi consequatur impedit. Adipisci nobis
-          mollitia quas dolorem dignissimos.
+          Innovative and forward-thinking Computer Science graduate with an
+          enquiring and entrepreneurial mind. Having achieved an Upper
+          Second-Class degree as well as a First in my final year dissertation,
+          I am actively seeking graduate positions where I can continue my
+          learning journey, expand my technical skill set, further exercise
+          creativity and challenge myself in a role that will provide me with
+          rich opportunities in the fast paced tech industry.<br />
+
+          If you are looking for someone like me to join your company then
+          please feel free to
+          <a class="in-text-link" href="mailto:georgeloweone@gmail.com">
+            email me </a
+          >or download my CV
+          <a class="in-text-link" href="George Lowe CV.pdf"> here </a> to find
+          out what I can bring to your team.
         </p>
       </div>
 
@@ -82,13 +88,9 @@
       <h2 class="section-title">Projects</h2>
       <div class="text-chunk">
         <p>
-          Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem
-          cumque et iste dolorem officia adipisci ipsum, cum hic consequatur
-          velit. optio quod repellat nostrum. Alias quo veritatis in, quas quae
-          ullam consectetur! Dignissimos tempora quo quia dolores rerum placeat
-          iure, deleniti quis, pariatur dolor qui molestias consequatur eum
-          veritatis deserunt. Voluptatum autem et ad, illo illum sit excepturi
-          deleniti corporis ipsum
+          I have included a few projects here implemented with a range of
+          different languages and technologies to demonstrate adaptability in
+          taking on new projects. I will be adding more projects very soon.
         </p>
         <p class="highlighted-text">
           Click on a project to see more information
